--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
+    "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.5.1",
+    "jspdf": "^1.5.3",
     "moment": "^2.27.0",
     "ng6-toastr-notifications": "^1.0.4",
     "path": "^0.12.7",
