--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jspdf": "^1.5.3",
     "moment": "^2.27.0",
     "ng6-toastr-notifications": "^1.0.4",
+    "ngx-socket-io": "^3.2.0",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
